# panaversity-spec-driven-todo

./: .gitignore  AGENTS.md  DEMO-VIDEO-SCRIPT.md  FINAL-SUBMISSION-CHECKLIST.md  HACKATHON-SUBMISSION.md  PHASE3-SUBMISSION.md  PHASE4-COMPLETE-SPECIFICATION-PACKAGE.md  PHASE4-FINAL-CHECKLIST.md  PHASE4-SUBMISSION.md  PHASE5-FINAL-SUBMISSION-SUMMARY.md  PHASE5-READY.md  PHASE5-SUBMISSION-GUIDE.md  PROCESS.md  README.md  START-HERE.md  SUBMISSION-README.md  check-backend-users.sql  check-users.sql  constitution.md  create-backend-user.sql  create-test-user.sql  pyproject.toml  vercel.json
phase-1-console/: .env.example
phase-2-fullstack/: ADVANCED-SEARCH-ENHANCEMENT-v5.0.10.md  BACKEND-COMPLETE.md  BETTER-AUTH-IMPLEMENTATION.md  BUG-FIXES-v5.0.9.md  CHATKIT-SETUP.md  COMMANDS.md  COMPLIANCE-REPORT.md  DEMO-VIDEO-GUIDE.md  DEPLOYMENT-COMPLETE-v5.0.9.md  DEPLOYMENT-v5.0.11-COMPLETE.md  FINAL-EVALUATION-REPORT.md  FRONTEND-COMPLETE.md  GKE-DEPLOYMENT-CHECKLIST.md  IMPLEMENTATION-STATUS.md  NEXT-STEPS.md  PHASE2-VALIDATION-DEPLOYMENT.md  PHASE3-CHATKIT-INSTALLED.md  PHASE3-COMPLETE.md  PHASE3-DEMO-GUIDE.md  PHASE3-TESTING-GUIDE.md  PREMIUM-DESIGN-v5.0.11.md  TESTING-GUIDE-v5.0.9.md  constitution.md  docker-compose.yml
phase-4-kubernetes/: IMPLEMENTATION-SUMMARY.md  PHASE4-IMPLEMENTATION-COMPLETE.md  QUICK-REFERENCE.md  README.md  gen_hash.py  kafka-cluster.yaml  test-register.json
phase-5-gke/: DEPLOYMENT-SECURITY.md  backend-deployment.yaml  deploy-5.0.6.ps1  deploy-5.0.8.ps1  deploy-frontend-5.0.5.ps1  deploy.ps1  frontend-deployment.yaml  namespace.yaml  (+2 more)
(+233 files in other folders)
