[project]
name = "hackathon-todo"
version = "0.1.0"
description = "Todo App - Spec-Driven Development (Panaversity Hackathon II)"
requires-python = ">=3.13"
dependencies = []
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
